Final major version

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 <br/>
 <br/>
 <br/>
-<div class="fb-like" data-href="https://developers.facebook.com/docs/plugins/" data-width="120" data-layout="" data-action="" data-size="" data-share="true"></div>
+<div class="fb-like" data-href="https://web-development-environments-2023.github.io/316120054/" data-width="120" data-layout="" data-action="" data-size="" data-share="true"></div>
 <br/>
 <br/>
 <br/>
@@ -134,21 +134,26 @@
 <a id="titles">Q&A</a>
 <br/>
 <br/>
+<h2>WEB 1.0 vs WEB 2.0 vs WEB 3.0</h2>
+<ul class="bullet">
+<li>Web 1.0, which emerged in the 1990s, was primarily a static web where information was primarily presented in a one-way flow from the website to the user. Web 2.0, which gained popularity in the early 2000s, introduced interactive features like social media, user-generated content, and web applications that allowed for two-way communication and collaboration between users. Web 3.0, also known as the semantic web, is still emerging but is focused on creating a more intelligent, interconnected web where data is machine-readable and can be easily processed by artificial intelligence algorithms.</li><br>
+
+<li>Web 1.0 relied heavily on HTML and basic CSS for web design, while Web 2.0 introduced more advanced technologies like AJAX and JavaScript that enabled more dynamic and interactive web pages. Web 3.0 is expected to rely on emerging technologies like blockchain and decentralized protocols to create a more secure and trustworthy web ecosystem.</li><br>
+  
+<li>Web 1.0 was largely focused on content consumption, while Web 2.0 introduced new business models that relied on user-generated content, social media, and online advertising. Web 3.0 is expected to bring new business models based on decentralized applications, smart contracts, and decentralized finance. Additionally, Web 3.0 is expected to prioritize privacy, security, and user control over personal data, which were not major concerns in the earlier versions of the web.</li><br>
+</ul>
+<h2>Examples for use cases</h2>
+<ul class="bullet">
+<li>Reading an article from a news website - Web 1.0 A user reads and can prints it out to share with a friend or colleague. Web 2.0, A user reads and can leaves a comment expressing their opinion, and shares the article on their social media accounts to encourage others to read it. Web 3.0,A user reads an article and uses their smart home device to ask for more information on the topic. </li><br>
+<li>Playing a game - Web 1.0, an option just on built in application. Web 2.0, A user plays an online game such as Minecraft or Fortnite, connecting with other players over the internet and collaborating to achieve common goals. Web 3.0, A user plays a game using virtual reality technology, fully immersing themselves in a lifelike environment and interacting with other players from around the world in real-time.</li><br>
+
+<li>Business models when visits websites - Web 1.0, A user visits a website and sees a banner ad for a product they have no interest in, based solely on the website's content. Web 2.0, A user browses a social media platform and sees ads for products or services that are tailored to their interests and demographic profile, based on data collected by the platform. Web 3.0, A user visits a website and is served personalized ads that are dynamically generated based on their browsing history, location, and other real-time data.  </li><br>
+</ul>
 <br/>
 <br/>
 <br/>
 <br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
-<br/>
+
 </section>
 
 <section id="contact" class="section">
